Bug 1330332 - Add support for handling global history changes with PendingGlobalHistoryEntry for prerendering, r=smaug

MozReview-Commit-ID: 2j9JwRSGtTC